Patch bugs found by FindBugs on Server